# shgen

./: .gitignore  Cargo.toml  Justfile  LICENCE  README.md  config.example.yaml  style.css  worker.js
.github/workflows/: publish-shweb.yaml  shweb.yaml
keep-awake/: Cargo.toml
keep-awake/src/: lib.rs  windows.rs
shgen/: .gitignore  Cargo.toml  Justfile  config.example.yaml
shgen-cli/: Cargo.toml
shgen-cli/src/: lib.rs
shgen-config/: Cargo.toml
shgen-config-core/: Cargo.toml
shgen-config-core/src/: lib.rs
shgen-config-core/src/search/: matching.rs
shgen-config-fs/: Cargo.toml
shgen-config-fs/src/: lib.rs  output.rs
shgen-config-model/: Cargo.toml
shgen-config-model-core/: Cargo.toml
shgen-config-model-core/src/search/: mod.rs
shgen-config-model-native/: Cargo.toml
shgen-config-model-native/src/: lib.rs  output.rs
shgen-config-model-wasm/: Cargo.toml
shgen-config-model-wasm/src/: lib.rs
shgen-config-model-wasm/src/search/: matching.rs  mod.rs
shgen-config-model/src/: lib.rs  output.rs  runtime.rs
shgen-config-model/src/search/: matching.rs  mod.rs
shgen-config-native/: Cargo.toml
shgen-config-native/src/: lib.rs  output.rs  runtime.rs
shgen-config-wasm/: Cargo.toml
shgen-config-wasm/src/: lib.rs  macros.rs
shgen-config/src/: lib.rs  output.rs  runtime.rs
shgen-config/src/search/: matching.rs  mod.rs
shgen-core/: Cargo.toml
shgen-core/src/: lib.rs
shgen-keep-awake/: Cargo.toml
shgen-keep-awake/src/: lib.rs  noop.rs
shgen-keep-awake/src/platform/: unsupported.rs  windows.rs
shgen-key-utils/: Cargo.toml
shgen-key-utils/src/: lib.rs  matcher.rs  openssh_format.rs
shgen-key-utils/src/openssh/: format.rs  mod.rs
shgen-keys/: Cargo.toml
shgen-keys/src/: lib.rs  matcher.rs  openssh_format.rs
shgen-rand/: Cargo.toml
shgen-rand/src/: lib.rs
shgen-types/: Cargo.toml
shgen-web/: Cargo.toml
shgen/src/: generate_keys.rs  main.rs  matcher.rs
shweb/: .gitignore  Cargo.toml  Justfile  jsconfig.json  shweb.just
shweb-wasm/: shweb_bg.wasm.d.ts
shweb-wasm/shweb-wasm/: package.json  shweb.d.ts  shweb.js  shweb_bg.wasm
shweb/src/: lib.rs
shweb/www/: detect-cpu-cores.js  index.html  main.js  style.css  worker.js
shweb/www/scripts/: main.js  worker.js
shweb/www/styles/: colour-scheme.css  style.css
src/: config.rs  main.rs  matcher.rs  openssh_format.rs
