[workspace]
resolver = "3"
members = [
  "shgen",
  "shgen-config-model-core",
  "shgen-config-model-native",
  "shgen-config-model-wasm",
  "shgen-core",
  "shgen-keep-awake",
  "shgen-key-utils",
  "shweb",
]

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
ed25519-dalek = { version = "3.0.0-pre.1", default-features = false }
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = "1.0.228"
wasm-bindgen = "0.2.104"

[profile.release]
lto = "thin"
codegen-units = 1
