[workspace]
resolver = "3"
members = [
  "shgen",
  "shgen-config-core",
  "shgen-config-native",
  "shgen-config-wasm",
  "shgen-types",
  "shgen-keep-awake",
  "shgen-key-utils",
  "shweb",
  "shgen-rand",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "BSD-3-Clause"

[workspace.dependencies]
ed25519-dalek = "3.0.0-pre.1"
rand = "0.9.2"
rand_aes = "0.6.0"
rand_chacha = "0.9.0"
serde = "1.0.228"
wasm-bindgen = "0.2.105"

[profile.release]
lto = "thin"
codegen-units = 1
