[package]
name = "shgen-keep-awake"
version.workspace = true
edition.workspace = true
license.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.0", features = [
  "Win32_System_Power",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
] }

[dependencies]
thiserror = "2.0.17"
