[package]
name = "shgen-key-utils"
version.workspace = true
edition.workspace = true

[dependencies]
aho-corasick = "1.1.3"
base64 = "0.22.1"
ed25519-dalek = { workspace = true, features = ["fast"] }
rand.workspace = true
rand_chacha.workspace = true
sha1 = "0.10.6"
sha2 = "0.10.9"
shgen-config-core = { path = "../shgen-config-core" }
shgen-core = { path = "../shgen-core" }
