[package]
name = "shgen"
version.workspace = true
edition.workspace = true

[dependencies]
ed25519-dalek.workspace = true
mimalloc = "0.1.48"
rand.workspace = true
shgen-config-native = { path = "../shgen-config-native", features = ["fs"] }
shgen-types = { path = "../shgen-types" }
shgen-keep-awake = { path = "../shgen-keep-awake" }
shgen-key-utils = { path = "../shgen-key-utils" }
shgen-rand = { path = "../shgen-rand" }
shgen-cli = { path = "../shgen-cli" }
