[package]
name = "shweb"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
ed25519-dalek.workspace = true
getrandom = { version = "0.3.3", features = ["wasm_js"] }
rand_chacha.workspace = true
serde-wasm-bindgen = "0.6.5"
shgen-config-model = { path = "../shgen-config-model", features = ["wasm"] }
shgen-keys = { path = "../shgen-keys" }
wasm-bindgen = "0.2.104"
