[package]
name = "shweb"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
ed25519-dalek.workspace = true
getrandom = { version = "0.3.3", features = ["wasm_js"] }
js-sys = "0.3.81"
rand_chacha.workspace = true
shgen-config-model-wasm = { path = "../shgen-config-model-wasm" }
shgen-key-utils = { path = "../shgen-key-utils" }
wasm-bindgen.workspace = true
